# serializer version: 1
# name: test_buttons_created[button.101_reboot-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.101_reboot',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <ButtonDeviceClass.RESTART: 'restart'>,
    'original_icon': None,
    'original_name': 'Reboot',
    'platform': 'blue_current',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'reboot',
    'unique_id': 'reboot_101',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons_created[button.101_reboot-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'restart',
      'friendly_name': '101 Reboot',
    }),
    'context': <ANY>,
    'entity_id': 'button.101_reboot',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons_created[button.101_reset-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.101_reset',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <ButtonDeviceClass.RESTART: 'restart'>,
    'original_icon': None,
    'original_name': 'Reset',
    'platform': 'blue_current',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'reset',
    'unique_id': 'reset_101',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons_created[button.101_reset-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'restart',
      'friendly_name': '101 Reset',
    }),
    'context': <ANY>,
    'entity_id': 'button.101_reset',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons_created[button.101_stop_charge_session-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.101_stop_charge_session',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Stop charge session',
    'platform': 'blue_current',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'stop_charge_session',
    'unique_id': 'stop_charge_session_101',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons_created[button.101_stop_charge_session-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '101 Stop charge session',
    }),
    'context': <ANY>,
    'entity_id': 'button.101_stop_charge_session',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
